# developer

./: .gitignore  .mtn-ignore  .mtn-ignore.template  Makefile.am  Makefile.content-framework.template  Makefile.documentation.template  Makefile.heterarch.template  Makefile.in  Makefile.template  TODO.txt  builddeb.sh  configure  configure.ac  configure.template  documentation-sync.template  keywords-outline.tex  keywords-outline.txt  project.pl  release-expand.config  release-expand.template  tests.config  tests.template  uninstall.py
contrib/: pythontest  test_env.pl
docs/: roadmap.txt
install/: release.yml
install/deb/: changelog  control  rules
install/osx/PackageMaker.pmdoc/: 01package-contents.xml  01package.xml  index.xml
install/osx/Resources/: Welcome.rtf
install/rpm/: developer.spec
python/: INFO.txt  Makefile.am  ns-pkgmgr  setup.py  uninstall.py
python/g3/: __cbi__.py  __init__.py
python/neurospaces/: __cbi__.py  developer.py  packages.py  shell.py  uninstall.py
test_templates/: README  tests.config
test_templates/html_output/: index.html
test_templates/html_output/tests/specifications/: 10_simple_examples_module.html  11_simple_examples_module.html  20_find_module.html  21_find_module_yaml.html  30_numerical_compare.html  31_numerical_compare_yaml.html  40_output_files.html  41_output_files_yaml.html  70_preparation.html  75_preparation_checker.html  echo_module.html  echo_module_yaml.html  find_module.html  find_module_yaml.html  main.html  numerical_compare.html  numerical_compare_yaml.html  output_files.html  output_files_yaml.html
test_templates/tests/: introduction.html
test_templates/tests/specifications/: 10_simple_examples_module.t  11_simple_examples_module.t  20_find_module.t  21_find_module_yaml.t  30_numerical_compare.t  30_preparation.t  31_numerical_compare_yaml.t  35_preparation_checker.t  40_output_files.t  41_output_files_yaml.t  70_preparation.t  75_preparation_checker.t  echo_module.t  echo_module_yaml.t  find_module.t  find_module_yaml.t  numerical_compare.t  numerical_compare_yaml.t  output_files.t  output_files_yaml.t
test_templates/tests/specifications/strings/: output_file.txt
tests/: introduction.html  neurospaces_harness  tests.config
tests/python/: package_manager_1.py  shell_1.py  shell_2.py  test_library.py
tests/python/test_dir/neurospaces/: __cbi__.py
tests/specifications/: 10_global.t  30_developer.t  40_workflow-automator.t  50_downloads.t  70_preparation.t  75_preparation_checker.t  client.t  developer.t  downloads.t  global.t
tests/specifications/11_global/: summary.yml
tests/specifications/11_global/command_definitions/: 40_wrong_options.yml
tests/specifications/40_workflow-automator/: 10_help-pages.t  20_new-project.t  25_new-project-docker.t  Dockerfile.neurospaces-testing  docker-build.bash
tests/specifications/70_harness/: 50_merges.t
tests/specifications/90_yaml/: 10_global.t  30_developer.t  50_downloads.t
tests/specifications/90_yaml/70_harness/: 10_help.t  70_preparation.t  75_preparation_checker.t
tests/specifications/90_yaml/70_harness/10_help/: summary.yml
tests/specifications/90_yaml/70_harness/10_help/command_definitions/: 100_help-message.yml
tests/specifications/91_json/: 10_global.t  30_developer.t  50_downloads.t
tests/specifications/91_json/70_harness/: 10_help.t  70_preparation.t  75_preparation_checker.t
tests/specifications/strings/: neurospaces_build--no-compile--no-configure--no-install--regex-developer--dry-run--developer--verbose--verbose--verbose.txt  neurospaces_build--no-compile--no-configure--no-install--regex-installer--dry-run--developer--verbose--verbose--verbose.txt  neurospaces_build--tag-build-10--no-compile--no-configure--no-install--regex-developer--dry-run--developer--verbose--verbose--verbose.txt  neurospaces_build--tag-build-10--no-compile--no-configure--no-install--regex-installer--dry-run--developer--verbose--verbose--verbose.txt
workflow-configuration/: neurospaces-commands  neurospaces-commands-harness  neurospaces-configuration
workflow-configuration/neurospaces-configuration-data/: build_servers.yml  command_filenames.yml  node_configuration.yml  target_servers.yml  targets.yml
