##
## The neurospaces project : modeling tools for computational
## neuroscience.
##

##############################################################################
##'
##' The neurospaces project
##'
##' Copyright (C) 2007 Hugo Cornelis
##'
##' Hugo Cornelis, hugo.cornelis@gmail.com
##'
##############################################################################


SUBDIRS = 

dist_bin_SCRIPTS = bin/release-expand bin/neurospaces_build bin/neurospaces_status

html-upload-prepare:

#t perhaps also add a target to check the syntax of all the html ?

html-upload: html-upload-prepare

test: check

TESTS = $(srcdir)/tests/run

